version/stable/_sources/api/ansys/mechanical/stubs/v252/Ansys/ACT/Automation/Mechanical/NastranExportOptions.rst.txt
.. vale off



:class:`NastranExportOptions`
=============================

.. py:class:: ansys.mechanical.stubs.v252.Ansys.ACT.Automation.Mechanical.NastranExportOptions(NastranFilename: str, AnalysisType: str, GridCS: int, Offset: int, WTMass: float, JointStiffness: float, PyramidElements: str, Modes: int, Time: float, GroundCheck: bool)

   Bases: :py:obj:`object`


   
   Defines the NastranExportOptions.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: NastranExportOptions

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Add`
            - Add method.
          * - :py:attr:`~Clear`
            - Clear method.
          * - :py:attr:`~ContainsKey`
            - ContainsKey method.
          * - :py:attr:`~ContainsValue`
            - ContainsValue method.
          * - :py:attr:`~EnsureCapacity`
            - EnsureCapacity method.
          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetEnumerator`
            - GetEnumerator method.
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetObjectData`
            - GetObjectData method.
          * - :py:attr:`~GetType`
            - GetType method.
          * - :py:attr:`~OnDeserialization`
            - OnDeserialization method.
          * - :py:attr:`~Remove`
            - Remove method.
          * - :py:attr:`~ToString`
            - ToString method.
          * - :py:attr:`~TrimExcess`
            - TrimExcess method.
          * - :py:attr:`~TryAdd`
            - TryAdd method.
          * - :py:attr:`~TryGetValue`
            - TryGetValue method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~AnalysisType`
            - Analysis type.
          * - :py:attr:`~Comparer`
            - Comparer property.
          * - :py:attr:`~Count`
            - Count property.
          * - :py:attr:`~GridCS`
            - Grid coordinate system number.
          * - :py:attr:`~GroundCheck`
            - Ground check.
          * - :py:attr:`~Item`
            - Item property.
          * - :py:attr:`~JointStiffness`
            - Joint stiffness.
          * - :py:attr:`~Keys`
            - Keys property.
          * - :py:attr:`~Modes`
            - Modes.
          * - :py:attr:`~NastranFilename`
            - Full path of Nastran export file.
          * - :py:attr:`~Offset`
            - Offset.
          * - :py:attr:`~PyramidElements`
            - Pyramid elements.
          * - :py:attr:`~Time`
            - Time.
          * - :py:attr:`~Values`
            - Values property.
          * - :py:attr:`~WTMass`
            - WTMass.







Property detail
---------------
.. py:property:: AnalysisType
   :type: Optional[str]


   
   Analysis type.
















   ..
       !! processed by numpydoc !!

.. py:property:: Comparer
   :type: Optional[System.Collections.Generic.IEqualityComparer[str]]


   
   Comparer property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Count
   :type: Optional[int]


   
   Count property.
















   ..
       !! processed by numpydoc !!

.. py:property:: GridCS
   :type: Optional[int]


   
   Grid coordinate system number.
















   ..
       !! processed by numpydoc !!

.. py:property:: GroundCheck
   :type: Optional[bool]


   
   Ground check.
















   ..
       !! processed by numpydoc !!

.. py:property:: Item
   :type: Optional[Any]


   
   Item property.
















   ..
       !! processed by numpydoc !!

.. py:property:: JointStiffness
   :type: Optional[float]


   
   Joint stiffness.
















   ..
       !! processed by numpydoc !!

.. py:property:: Keys
   :type: Optional[System.Collections.Generic.Dictionary.KeyCollection[str, Any]]


   
   Keys property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Modes
   :type: Optional[int]


   
   Modes.
















   ..
       !! processed by numpydoc !!

.. py:property:: NastranFilename
   :type: Optional[str]


   
   Full path of Nastran export file.
















   ..
       !! processed by numpydoc !!

.. py:property:: Offset
   :type: Optional[int]


   
   Offset.
















   ..
       !! processed by numpydoc !!

.. py:property:: PyramidElements
   :type: Optional[str]


   
   Pyramid elements.
















   ..
       !! processed by numpydoc !!

.. py:property:: Time
   :type: Optional[float]


   
   Time.
















   ..
       !! processed by numpydoc !!

.. py:property:: Values
   :type: Optional[System.Collections.Generic.Dictionary.ValueCollection[str, Any]]


   
   Values property.
















   ..
       !! processed by numpydoc !!

.. py:property:: WTMass
   :type: Optional[float]


   
   WTMass.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Add(key: str, value: Any) -> None

   
   Add method.

   ..
       !! processed by numpydoc !!

.. py:method:: Clear() -> None

   
   Clear method.

   ..
       !! processed by numpydoc !!

.. py:method:: ContainsKey(key: str) -> bool

   
   ContainsKey method.

   ..
       !! processed by numpydoc !!

.. py:method:: ContainsValue(value: Any) -> bool

   
   ContainsValue method.

   ..
       !! processed by numpydoc !!

.. py:method:: EnsureCapacity(capacity: int) -> int

   
   EnsureCapacity method.

   ..
       !! processed by numpydoc !!

.. py:method:: Equals(obj: Any) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetEnumerator() -> System.Collections.Generic.Dictionary.Enumerator[str, Any]

   
   GetEnumerator method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetObjectData(info: System.Runtime.Serialization.SerializationInfo, context: System.Runtime.Serialization.StreamingContext) -> None

   
   GetObjectData method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetType() -> type

   
   GetType method.

   ..
       !! processed by numpydoc !!

.. py:method:: OnDeserialization(sender: Any) -> None

   
   OnDeserialization method.

   ..
       !! processed by numpydoc !!

.. py:method:: Remove(key: str) -> bool

   
   Remove method.

   ..
       !! processed by numpydoc !!

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!

.. py:method:: TrimExcess() -> None

   
   TrimExcess method.

   ..
       !! processed by numpydoc !!

.. py:method:: TryAdd(key: str, value: Any) -> bool

   
   TryAdd method.

   ..
       !! processed by numpydoc !!

.. py:method:: TryGetValue(key: str, value: Any) -> bool

   
   TryGetValue method.

   ..
       !! processed by numpydoc !!



.. vale on